--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
     compileSdkVersion 30
 
     defaultConfig {
-        applicationId "com.etcmobileapps.dogrunusuogren"
+        applicationId "com.etcmobileapps.dogrusunuogren"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
