Animasyonlar kasma sebebiyle yorum satırına dönüştürüldü. Uygulama aab. çıktısı alınıp markete yayınlanmak üzere gönderildi.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
     compileSdkVersion 30
 
     defaultConfig {
-        applicationId "com.etcmobileapps.dogrusunuogren"
+        applicationId "com.etcmobileapps.dogruyubulkelimeoyunu"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
@@ -60,7 +60,7 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-
+    implementation 'com.google.android.gms:play-services-ads:20.2.0'
     //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
